# Search-Engine

./: .gitignore  Cargo.toml  ReadMe.md  build_and_run_engine.sh  build_and_run_tests.sh  merge_file_contents.sh  queries.txt  run_tests.sh
.github/: FUNDING.yml
documents/: query10document1.txt  query10document10.txt  query10document2.txt  query10document3.txt  query10document4.txt  query10document5.txt  query10document6.txt  query10document7.txt  query10document8.txt  query10document9.txt  query1document1.txt  query1document10.txt  query1document2.txt  query1document3.txt  query1document4.txt  query1document5.txt  query1document6.txt  query1document7.txt  query1document8.txt  query1document9.txt  query2document1.txt  query2document10.txt  query2document2.txt  query2document3.txt  query2document4.txt  query2document5.txt  query2document6.txt  query2document7.txt  query2document8.txt  query2document9.txt  query3document1.txt  query3document10.txt  query3document2.txt  query3document3.txt  query3document4.txt  query3document5.txt  query3document6.txt  query3document7.txt  query3document8.txt  query3document9.txt  (+60 more)
src/: lib.rs  main.rs  processor.rs  server.rs
